# server-rs

./: .dockerignore  .gitignore  .rustfmt.toml  AGENTS.md  BENCHMARKS.md  CLAUDE.md  Cargo.toml  Dockerfile  PERFORMANCE_REVIEW_PLAN.md  PG_LSP_IMPLEMENTATION_PLAN.md  README.md  clippy.toml  docker-compose.inferno.yml  docker-compose.yml  justfile  jwt_private_pkcs8.pem  jwt_public.pem  octofhir.example.toml  octofhir.test.toml  octofhir.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  run-perf.sh
crates/octofhir-auth/: Cargo.toml
crates/octofhir-auth-postgres/: Cargo.toml
crates/octofhir-auth-postgres/src/: app.rs  authorize_session.rs  client.rs  consent.rs  identity_provider.rs  launch_context.rs  lib.rs  policy.rs  policy_listener.rs  revoked_token.rs  role.rs  session.rs  session_token_index.rs  sso_session.rs  storage_adapters.rs  token.rs  user.rs
crates/octofhir-auth/benches/: quickjs_bench.rs  rhai_bench.rs
crates/octofhir-auth/src/: app_secret.rs  config.rs  device.rs  error.rs  lib.rs  types.rs
crates/octofhir-auth/src/audit/: mod.rs
crates/octofhir-auth/src/extractors/: basic_auth.rs  mod.rs
crates/octofhir-auth/src/federation/: auth.rs  client_jwks.rs  discovery.rs  error.rs  identity.rs  jwks.rs  mod.rs  oidc.rs  (+2 more)
crates/octofhir-cli/: Cargo.toml
crates/octofhir-cli/src/: auth.rs  cli.rs  client.rs  config.rs  main.rs  output.rs
crates/octofhir-config/: Cargo.toml
crates/octofhir-config/src/: events.rs  feature_flags.rs  lib.rs  manager.rs  merger.rs  secrets.rs  storage.rs
crates/octofhir-core/: Cargo.toml
crates/octofhir-core/src/: error.rs  fhir.rs  fhir_reference.rs  id.rs  lib.rs  monitoring.rs  operations.rs  resource.rs  search_index.rs  text.rs  time.rs
crates/octofhir-cql-service/: Cargo.toml
crates/octofhir-cql-service/src/: config.rs  data_provider.rs  error.rs  lib.rs  library_cache.rs  service.rs  terminology_provider.rs
crates/octofhir-db/: Cargo.toml
crates/octofhir-db-memory/: Cargo.toml
crates/octofhir-db-memory/src/: factory.rs  fhir_impl.rs  lib.rs  query.rs  storage.rs  transaction.rs
crates/octofhir-db-postgres/: Cargo.toml
crates/octofhir-db-postgres/migrations/: 001_base_schema.sql  003_gateway_resource_notify.sql  004_fcm_schema.sql  005_async_jobs.sql  20241201000001_base_schema.sql  20241201000002_octofhir_schema.sql  20241201000003_gateway_resource_notify.sql  20241201000004_fcm_schema.sql  20241201000005_async_jobs.sql  20241201000006_temp_valueset_tables.sql  20241201000007_fcm_triggers.sql  20241201000008_configuration.sql  20241201000009_policy_notify.sql  20241201000010_operations.sql  20241213000001_consolidated_schema.sql  20260220000001_pg_trgm_extension.sql  20260225000001_db_console_history.sql  20260601000001_date_index_tstzrange.sql  20260602000001_unaccent_extension.sql  20260603000001_search_idx_string.sql  20260604000001_search_idx_numeric.sql  20260605000001_search_idx_reference_presence.sql
crates/octofhir-db-postgres/src/: config.rs  conformance.rs  db_sync.rs  error.rs  fcm_storage.rs  functional_indexes.rs  gin_maintenance.rs  hot_reload.rs  index_writer.rs  lib.rs  notification_storage.rs  pool.rs  query_analyzer.rs  schema.rs  search_index.rs  storage.rs  transaction.rs
crates/octofhir-db-postgres/tests/: history_pagination_test.rs  migration_test.rs  search_explain_test.rs  search_index_transaction_test.rs
crates/octofhir-db/benches/: storage_maps.rs
crates/octofhir-db/src/: factory.rs  lib.rs  query.rs  storage.rs  transaction.rs
crates/octofhir-db/tests/: end_to_end_schema.rs  schema_generation.rs
crates/octofhir-graphql/: Cargo.toml
crates/octofhir-graphql/src/: config.rs  context.rs  error.rs  handler.rs  lib.rs  operations.rs
crates/octofhir-graphql/tests/: debug_complex_types.rs  debug_query_name.rs  debug_schema_generation.rs  query_integration.rs
crates/octofhir-jsc/: Cargo.toml  build.rs
crates/octofhir-jsc/benches/: jsc_bench.rs
crates/octofhir-jsc/src/: bindings.rs  context.rs  error.rs  lib.rs  runtime.rs  transpiler.rs  value.rs
crates/octofhir-notifications/: Cargo.toml
crates/octofhir-notifications/src/: error.rs  lib.rs  provider.rs  queue.rs  scheduler.rs  service.rs  subscription.rs  templates.rs  types.rs
crates/octofhir-search/: Cargo.toml
crates/octofhir-search/benches/: date_search.rs
crates/octofhir-search/src/: chaining.rs  common.rs  config_watcher.rs  engine.rs  filter.rs  include.rs  lib.rs  loader.rs  parameters.rs  params_converter.rs  parser.rs  query_cache.rs  registry.rs  reloadable.rs  reverse_chaining.rs  sql_builder.rs  terminology.rs  terminology_preprocess.rs
crates/octofhir-server/: Cargo.toml  build.rs
crates/octofhir-server/src/: async_jobs.rs  async_jobs_old.rs  audit.rs  bootstrap.rs  canonical.rs  compartments.rs  config.rs  config_manager.rs  config_watch.rs  handlers.rs  json_schema.rs  lib.rs  log_stream.rs  main.rs  mapping.rs  metrics.rs  middleware.rs  model_provider.rs  notebook_api.rs  notebook_run.rs  observability.rs  patch.rs  reference_resolver.rs  server.rs  storage_adapter.rs  terminology_service.rs  validation.rs
crates/octofhir-server/tests/: automation_integration.rs  canonical_hot_reload.rs  canonical_registry.rs  config_parsing.rs  config_reload.rs  crud_and_search.rs  fhir_resolver_integration.rs  hybrid_parser_tests.rs  integration_search.rs  integration_transactions.rs  json_acceptance.rs  lsp_completion.rs  manager_integration.rs  metadata_fhir_version.rs  metadata_packages.rs  package_version_errors.rs  parser_comparison.rs  redis_cache.rs  rest_console_introspection.rs  searchparameter_registration_test.rs  semantic_analyzer_tests.rs  server_endpoints.rs  terminology_integration.rs  test_treesitter_jsonb.rs  validation_skip.rs  validation_skip_unit.rs
crates/octofhir-storage/: Cargo.toml
crates/octofhir-storage/src/: error.rs  evented.rs  lib.rs  traits.rs  types.rs
crates/pgls-text-size/: Cargo.toml
crates/pgls-text-size/src/: lib.rs
crates/pgls-treesitter/: Cargo.toml
crates/pgls-treesitter-grammar/: Cargo.toml
crates/pgls-treesitter/src/: lib.rs
(+1200 files in other folders)
