[workspace]
resolver = "3"
members = [
    "crates/octofhir-api",
    "crates/octofhir-auth",
    "crates/octofhir-auth-postgres",
    "crates/octofhir-config",
    "crates/octofhir-core",
    "crates/octofhir-cql-service",
    "crates/octofhir-db-postgres",
    "crates/octofhir-graphql",
    "crates/octofhir-notifications",
    "crates/octofhir-search",
    "crates/octofhir-server",
    "crates/octofhir-sof",
    "crates/octofhir-storage",
    "crates/octofhir-cli",
]

[workspace.package]
version = "0.0.1"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["OctoFHIR Team <funyloony@gmail.com>"]
repository = "https://github.com/octofhir/server-rs"
keywords = ["fhir", "healthcare", "server", "api"]
categories = ["web-programming", "science"]

[workspace.dependencies]
# Local dependencies
octofhir-auth = { path = "crates/octofhir-auth" }
octofhir-auth-postgres = { path = "crates/octofhir-auth-postgres" }
octofhir-config = { path = "crates/octofhir-config" }
octofhir-core = { path = "crates/octofhir-core" }
octofhir-graphql = { path = "crates/octofhir-graphql" }
octofhir-sof = { path = "crates/octofhir-sof" }
octofhir-storage = { path = "crates/octofhir-storage" }
octofhir-canonical-manager = { version = "0.1.26", default-features = false }
octofhir-fhir-model = { version = "0.1.11", features = ["http-client", "caching"] }

# async-lsp for SQL language server (better state management than tower-lsp)
async-lsp = { version = "0.2", features = ["tokio"] }
lsp-types = "0.97"

mold_parser = { git = "https://github.com/octofhir/mold.git", branch = "main" }
mold_syntax = { git = "https://github.com/octofhir/mold.git", branch = "main" }
mold_hir = { git = "https://github.com/octofhir/mold.git", branch = "main" }
mold_completion = { git = "https://github.com/octofhir/mold.git", branch = "main" }
mold_format = { git = "https://github.com/octofhir/mold.git", branch = "main" }
text-size = "1.1"

# Test utilities
filetime = "0.2"

# CLI
clap = { version = "4", features = ["derive", "env"] }
reqwest = { version = "0.13.2", features = ["json", "query"] }
dirs = "6"
colored = "3"
tabled = "0.20"

# Core dependencies
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"

# HTTP server
axum = { version = "0.8", features = ["json",  "macros"] }
tower = { version = "0.5", features = ["timeout", "load-shed", "limit"] }
tower-http = { version = "0.6", features = ["trace", "cors", "compression-gzip"] }
hyper = { version = "1", features = ["full"] }

# Storage and concurrency
dashmap = "6.1"  # For some auxiliary maps if needed
arc-swap = "1.8"  # Lock-free atomic pointer swapping
uuid = { version = "1.21", features = ["v4", "serde"] }

# Time handling
time = { version = "0.3", features = ["serde", "macros", "parsing", "formatting"] }

# Configuration
config = "0.15"
toml = "0.9"
notify = "8"
notify-debouncer-mini = "0.7"

# Logging and observability
tracing = { version = "0.1", features = ["release_max_level_info"] }
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "registry", "json"] }
opentelemetry = { version = "0.30", features = ["trace"] }
opentelemetry-otlp = { version = "0.30", features = ["http-proto", "reqwest"] }
tracing-opentelemetry = "0.31"
opentelemetry_sdk = { version = "0.30", features = ["rt-tokio"] }
hostname = "0.4"

# JSON Patch (RFC 6902)
json-patch = "4"

octofhir-fhirpath = { version = "0.4.43", features = ["lsp"] }
octofhir-fhirschema = { version = "0.3.18" }

octofhir-cql = { version = "0.1.0" }
octofhir-cql-types = { version = "0.1.0" }
octofhir-cql-eval = {version = "0.1.0" }
octofhir-cql-model = { version = "0.1.0" }

# Environment
dotenvy = "0.15"

# Utilities
futures-util = "0.3"
regex = "1"
ipnetwork = "0.21"
url = { version = "2.5", features = ["serde"] }
indexmap = "2"
async-trait = "0.1"

# Development dependencies
tokio-test = "0.4"
tempfile = "3"
wiremock = "0.6"
assert-json-diff = "2.0"

[profile.dev]
incremental = true
debug = 2

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
# debug = true  # Enable debug symbols for profiling

[profile.bench]
inherits = "release"
debug = true
