[package]
name = "octofhir-auth-postgres"
description = "PostgreSQL storage backend for octofhir-auth"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
# Internal
octofhir-auth = { workspace = true }

# Workspace dependencies
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

# Password hashing
bcrypt = "0.16"

# Random generation
rand = "0.8"

# Encoding
hex = "0.4"

# Database (use sqlx-core and sqlx-postgres to avoid sqlite conflict)
sqlx-core = { version = "0.8.6", default-features = false, features = [
    "_rt-tokio",
    "_tls-native-tls",
    "json",
    "migrate"
] }
sqlx-postgres = { version = "0.8.6", default-features = false, features = [
    "json",
    "uuid",
    "time",
    "migrate"
] }

[dev-dependencies]
tokio-test = { workspace = true }
