[package]
name = "octofhir-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "CLI tool for interacting with FHIR servers"

[[bin]]
name = "octofhir"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
colored = { workspace = true }
tabled = { workspace = true }
dirs = { workspace = true }
toml = { workspace = true }
url = { workspace = true }
