[package]
name = "octofhir-db-memory"
description = "In-memory storage backend for OctoFHIR server"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
octofhir-core = { workspace = true }
octofhir-storage = { workspace = true }
papaya = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
time = { workspace = true }

[dev-dependencies]
fastrand = "2.0"
divan = "0.1"
dashmap = { workspace = true }

[[bench]]
name = "storage_maps"
harness = false