[package]
name = "octofhir-db"
version = "0.1.0"
edition = "2021"
description = "Storage layer for OctoFHIR server"

[dependencies]
octofhir-core = { workspace = true }
papaya = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }

[dev-dependencies]
fastrand = "2.0"