[package]
name = "octofhir-jsc"
version = "0.1.0"
edition = "2021"
description = "JavaScriptCore runtime for OctoFHIR automation"
license = "MIT"

[dependencies]
# Error handling
thiserror = "1"
anyhow = "1"

# Async runtime (for block_on in sync callbacks)
tokio = { version = "1", features = ["rt", "sync"] }

# HTTP client for fetch implementation (blocking for sync JS callbacks)
reqwest = { version = "0.12", features = ["json", "rustls-tls", "blocking"], default-features = false }

# CPU count for default pool size
num_cpus = "1.16"

# JSON serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging
tracing = "0.1"

# Thread-safe primitives
parking_lot = "0.12"

# Atomic operations
crossbeam-utils = "0.8"

# TypeScript transpilation (SWC) - using latest versions
swc_common = { version = "18", features = ["sourcemap"] }
swc_ecma_ast = "19"
swc_ecma_parser = "32"
swc_ecma_codegen = "21"
swc_ecma_transforms_base = "35"
swc_ecma_transforms_typescript = "35"
swc_ecma_visit = "19"

[build-dependencies]
# For JSC build automation
cc = "1"
pkg-config = "0.3"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
criterion = { version = "0.8", features = ["html_reports"] }

[[bench]]
name = "jsc_bench"
harness = false

[features]
default = []
# Use system JSC on macOS (via framework)
system-jsc = []
# Build JSC from source (for Linux)
build-jsc = []
