[package]
name = "octofhir-notifications"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tokio = { workspace = true, features = ["sync", "time"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
time = { workspace = true, features = ["serde"] }

# Email
lettre = { version = "0.11", features = ["tokio1-rustls-tls", "smtp-transport", "builder"], default-features = false }

# HTTP (for SendGrid, webhooks, Telegram)
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Webhook HMAC signatures
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
