[package]
name = "octofhir-search"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Search parameter parsing and execution for OctoFHIR server"

[dependencies]
# Local dependencies
octofhir-core = { path = "../octofhir-core" }
octofhir-storage = { path = "../octofhir-storage" }

# Canonical manager for loading search parameters from packages
octofhir-canonical-manager = { workspace = true }

# FHIR model with terminology support
octofhir-fhir-model = { workspace = true }

# Workspace dependencies
dashmap = { workspace = true }
arc-swap = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
url = { workspace = true }
indexmap = { workspace = true }
regex = { workspace = true }
time = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

# Database (for large ValueSet expansion optimization)
sqlx-postgres = { version = "0.8.6", default-features = false, features = [
    "json",
    "chrono",
    "uuid"
] }
urlencoding = "2.1.3"

# File watching for hot reload
notify = { workspace = true }
toml = { workspace = true }

# Fast random number generation for probabilistic cache cleanup
fastrand = "2.1"

[dev-dependencies]
tokio-test = { workspace = true }
tempfile = { workspace = true }
