[package]
name = "octofhir-server"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
description = "HTTP server implementation for OctoFHIR"

[[bin]]
name = "octofhir-server"
path = "src/main.rs"

[dependencies]
# Local dependencies
octofhir-core = { path = "../octofhir-core" }
octofhir-db = { path = "../octofhir-db" }
octofhir-api = { path = "../octofhir-api" }
octofhir-search = { path = "../octofhir-search" }
octofhir-canonical-manager = { workspace = true }

# Workspace dependencies
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
hyper = { workspace = true }
tokio = { workspace = true }
futures-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
config = { workspace = true }
toml = { workspace = true }
notify = { workspace = true }
notify-debouncer-mini = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry-otlp = { workspace = true }
tracing-opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
hostname = { workspace = true }
uuid = { workspace = true }
url = { workspace = true }
time = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
tempfile = { workspace = true }
wiremock = { workspace = true }
reqwest = { version = "0.12", features = ["json"] }
filetime = { workspace = true }

