[package]
name = "octofhir-server"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
description = "HTTP server implementation for OctoFHIR"

[features]
default = []
vendored-openssl = ["reqwest/native-tls-vendored"]

[[bin]]
name = "octofhir-server"
path = "src/main.rs"

[dependencies]
# Environment loading
dotenvy = { workspace = true }

# Local dependencies
octofhir-core = { path = "../octofhir-core" }
octofhir-config = { path = "../octofhir-config" }
octofhir-db-postgres = { path = "../octofhir-db-postgres" }
octofhir-storage = { path = "../octofhir-storage" }
octofhir-api = { path = "../octofhir-api" }
octofhir-search = { path = "../octofhir-search" }
octofhir-auth = { path = "../octofhir-auth" }
octofhir-auth-postgres = { path = "../octofhir-auth-postgres" }
octofhir-canonical-manager = { workspace = true }
octofhir-graphql = { path = "../octofhir-graphql" }
async-trait = { workspace = true }

# Workspace dependencies
axum = { workspace = true, features = ["ws"] }
tower = { workspace = true }
tower-http = { workspace = true }
async-lsp = { workspace = true }

# PostgreSQL Language Server
mold_parser = { workspace = true }
mold_syntax = { workspace = true }
mold_hir = { workspace = true }
mold_completion = { workspace = true }
mold_format = { workspace = true }
text-size = { workspace = true }
hyper = { workspace = true }
tokio = { workspace = true }
tokio-stream = "0.1"
futures-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
config = { workspace = true }
toml = { workspace = true }
notify = { workspace = true }
notify-debouncer-mini = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry-otlp = { workspace = true }
tracing-opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
hostname = { workspace = true }
uuid = { workspace = true }
url = { workspace = true }
time = { workspace = true }
json-patch = { workspace = true }
octofhir-fhirpath = { workspace = true }
octofhir-fhir-model = { workspace = true }
octofhir-fhirschema = { workspace = true }

# UI embedding
include_dir = "0.7"
mime_guess = "2.0"

# HTTP date parsing/formatting
httpdate = "1.0"

# URL encoding for query string construction
urlencoding = "2.1"

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# Database
sqlx-core = { version = "0.8.6", default-features = false, features = [
    "_rt-tokio",
    "_tls-native-tls",
    "json",
    "migrate"
] }
sqlx-postgres = { version = "0.8.6", default-features = false, features = [
    "json",
    "chrono",
    "uuid",
    "migrate"
] }
chrono = { version = "0.4", features = ["serde"] }

# Password hashing
bcrypt = "0.16"

# Redis caching (optional, for horizontal scaling)
deadpool-redis = "0.18"
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }
rmp-serde = "1.3"  # MessagePack for efficient serialization
dashmap = "6.1"  # Concurrent HashMap for L1 cache
moka = { version = "0.12", features = ["future"] }  # LRU cache for lazy schema loading
regex.workspace = true
tokio-util = { version = "0.7.17", features = ["compat"] }
futures = "0.3.31"

[dev-dependencies]
tokio-test = { workspace = true }
tempfile = { workspace = true }
wiremock = { workspace = true }
reqwest = { version = "0.12", features = ["json"] }
filetime = { workspace = true }
testcontainers = "0.25"
testcontainers-modules = { version = "0.13", features = ["postgres", "redis"] }
insta = "1.45.0"
