[package]
name = "octofhir-server"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
description = "HTTP server implementation for OctoFHIR"

[features]
default = ["mimalloc"]
vendored-openssl = ["reqwest/native-tls-vendored"]
mimalloc = ["dep:mimalloc"]

[[bin]]
name = "octofhir-server"
path = "src/main.rs"

[dependencies]
# Environment loading
dotenvy = { workspace = true }

# Local dependencies
octofhir-core = { path = "../octofhir-core" }
octofhir-config = { path = "../octofhir-config" }
octofhir-db-postgres = { path = "../octofhir-db-postgres" }
octofhir-storage = { path = "../octofhir-storage" }
octofhir-api = { path = "../octofhir-api" }
octofhir-search = { path = "../octofhir-search" }
octofhir-auth = { path = "../octofhir-auth" }
octofhir-auth-postgres = { path = "../octofhir-auth-postgres" }
octofhir-notifications = { path = "../octofhir-notifications" }
octofhir-canonical-manager = { workspace = true }
octofhir-graphql = { path = "../octofhir-graphql" }
# otter-runtime = "0.1"
octofhir-sof = { path = "../octofhir-sof" }
async-trait = { workspace = true }
num_cpus = "1.16"

# Workspace dependencies
axum = { workspace = true, features = ["ws", "multipart"] }
tower = { workspace = true }
tower-http = { workspace = true }
async-lsp = { workspace = true }

# PostgreSQL Language Server
mold_parser = { workspace = true }
mold_syntax = { workspace = true }
mold_hir = { workspace = true }
mold_completion = { workspace = true }
mold_format = { workspace = true }
text-size = { workspace = true }
hyper = { workspace = true }
tokio = { workspace = true }
tokio-stream = "0.1"
futures-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
config = { workspace = true }
toml = { workspace = true }
notify = { workspace = true }
notify-debouncer-mini = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry-otlp = { workspace = true }
tracing-opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
hostname = { workspace = true }
uuid = { workspace = true }
url = { workspace = true }
time = { workspace = true }
json-patch = { workspace = true }
octofhir-fhirpath = { workspace = true }
octofhir-fhir-model = { workspace = true }
octofhir-fhirschema = { workspace = true }

# UI embedding
include_dir = "0.7"
mime_guess = "2.0"

# HTTP date parsing/formatting
httpdate = "1.0"

# URL encoding for query string construction
urlencoding = "2.1"

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# Email (SMTP)
lettre = { version = "0.11", features = ["tokio1-rustls-tls", "smtp-transport", "builder"], default-features = false }

# WebSocket client for proxy
tokio-tungstenite = "0.24"

# Database
# Note: Use sqlx-postgres/sqlx-core directly for database operations
# These provide the PgPool type and query macros without the sqlite conflict
sqlx-core = { version = "0.8.6", default-features = false, features = [
    "_rt-tokio",
    "_tls-native-tls",
    "json",
    "migrate"
] }
sqlx-postgres = { version = "0.8.6", default-features = false, features = [
    "json",
    "chrono",
    "uuid",
    "migrate"
] }
chrono = { version = "0.4", features = ["serde"] }

# Password hashing
argon2 = { version = "0.5.3", features = ["std"] }

# Random generation and encoding for client secrets
rand = "0.8"
hex = "0.4"

# Redis caching (optional, for horizontal scaling)
deadpool-redis = "0.18"
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }
rmp-serde = "1.3"  # MessagePack for efficient serialization
dashmap = "6.1"  # Concurrent HashMap for L1 cache
arc-swap = "1.7"  # Lock-free atomic pointer swapping for hot paths
moka = { version = "0.12", features = ["future"] }  # LRU cache for lazy schema loading
parking_lot = "0.12"  # High-performance RwLock for operation provider caching
regex.workspace = true
tokio-util = { version = "0.7.17", features = ["compat"] }

# Prometheus metrics
metrics = "0.24"
metrics-exporter-prometheus = "0.16"
futures = "0.3.31"

# High-performance allocator (optional, enabled by default)
mimalloc = { version = "0.1", default-features = false, optional = true }
base64 = "0.22.1"

# Cron scheduling for automation
# croner = "2.0"

# Package extraction for Implementation Guide uploads
tar = "0.4"
flate2 = "1.0"
tempfile = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
wiremock = { workspace = true }
reqwest = { version = "0.12", features = ["json"] }
filetime = { workspace = true }
testcontainers = "0.25"
testcontainers-modules = { version = "0.13", features = ["postgres", "redis"] }
insta = "1.45.0"
